--- a/Code.ipynb
+++ b/Code.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
     "\n",
     "train = pd.read_csv('ML2_data/recipe_train.csv')\n",
     "\n",
-    "X_train_raw = train.iloc[:,:]\n",
+    "X_train_raw = train.iloc[:,:-1]\n",
     "y_train = train.iloc[:,-1]\n",
     "\n",
     "X_test_raw = pd.read_csv('ML2_data/recipe_test.csv')\n"
@@ -74,7 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,15 +103,30 @@
     "Xtrain_steps =  s_vocab.fit_transform(Xtrain_steps).todense()\n",
     "Xtest_steps = s_vocab.transform(Xtest_steps).todense()\n",
     "\n",
-    "Xtrain_ingreds =  i_vocab.fit_transform(Xtrain_ingredients).todense()\n",
-    "Xtest_ingreds = i_vocab.transform(Xtest_ingredients).todense()"
+    "Xtrain_ingredients =  i_vocab.fit_transform(Xtrain_ingredients).todense()\n",
+    "Xtest_ingredients = i_vocab.transform(Xtest_ingredients).todense()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-50-46265880e9bd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mXtest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX_test_raw\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mXtrain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'name'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mXtrain_names\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mXtrain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'steps'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mXtrain_steps\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mXtrain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'ingredients'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mXtrain_ingredients\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__setitem__\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   3368\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3369\u001b[0m             \u001b[1;31m# set column\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3370\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3371\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3372\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_setitem_slice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_set_item\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   3443\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3444\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_ensure_valid_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3445\u001b[1;33m         \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_sanitize_column\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3446\u001b[0m         \u001b[0mNDFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3447\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_sanitize_column\u001b[1;34m(self, key, value, broadcast)\u001b[0m\n\u001b[0;32m   3635\u001b[0m                     \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray_tuplesafe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3636\u001b[0m             \u001b[1;32melif\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3637\u001b[1;33m                 \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3638\u001b[0m             \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3639\u001b[0m                 \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdeep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mMemoryError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Switch columns with CountVec/Word2Vec fitted values\n",
     "\n",
@@ -113,184 +135,66 @@
     "\n",
     "Xtrain['name'] = Xtrain_names\n",
     "Xtrain['steps'] = Xtrain_steps\n",
-    "Xtrain['ingredients'] = Xtrain_ingreds\n",
+    "Xtrain['ingredients'] = Xtrain_ingredients\n",
     "\n",
     "Xtest['name'] = Xtest_names\n",
     "Xtest['steps'] = Xtest_steps\n",
-    "Xtest['ingredients'] = Xtest_ingreds\n",
-    "\n"
+    "Xtest['ingredients'] = Xtest_ingredients"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>n_steps</th>\n",
-       "      <th>n_ingredients</th>\n",
-       "      <th>steps</th>\n",
-       "      <th>ingredients</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>13</td>\n",
-       "      <td>['mix flour , salt and pepper together on a sh...</td>\n",
-       "      <td>['flour', 'salt', 'black pepper', 'skinless ch...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>['with a mortar and pestle or with the bottom ...</td>\n",
-       "      <td>['black peppercorns', 'feta cheese', 'honey']</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>11</td>\n",
-       "      <td>['preheat oven to 350f', 'line mini muffin cup...</td>\n",
-       "      <td>['butter', 'semi-sweet chocolate chips', 'coco...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>6</td>\n",
-       "      <td>['in a small bowl , peel , break , and then ma...</td>\n",
-       "      <td>['banana', 'eggs', 'vanilla extract', 'walnuts...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>['clean chicken and pat dry', 'sprinkle salt a...</td>\n",
-       "      <td>['roasting chickens', 'sweet onion', 'parsley'...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>9</td>\n",
-       "      <td>['preheat broiler and coat a baking sheet with...</td>\n",
-       "      <td>['cooking spray', 'plain fat-free yogurt', 'pa...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>['preheat oven to 350 degrees', 'line the bott...</td>\n",
-       "      <td>['pickled jalapeno pepper', 'eggs', 'mild ched...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>6</td>\n",
-       "      <td>['to make prickley pear margarita mix:', 'in a...</td>\n",
-       "      <td>['margarita mix', 'prickly pears', 'gold tequi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>10</td>\n",
-       "      <td>['combine ground beef / mince , breadcrumbs , ...</td>\n",
-       "      <td>['ground beef', 'breadcrumbs', 'garlic', 'swee...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0</td>\n",
-       "      <td>24</td>\n",
-       "      <td>18</td>\n",
-       "      <td>['adjust an oven rack to the middle position a...</td>\n",
-       "      <td>['panko breadcrumbs', 'olive oil', 'parmesan c...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   name  n_steps  n_ingredients  \\\n",
-       "0     0        9             13   \n",
-       "1     0        3              3   \n",
-       "2     0        8             11   \n",
-       "3     0        9              6   \n",
-       "4     0        9             10   \n",
-       "5     0       11              9   \n",
-       "6     0        7              4   \n",
-       "7     0       14              6   \n",
-       "8     0        9             10   \n",
-       "9     0       24             18   \n",
-       "\n",
-       "                                               steps  \\\n",
-       "0  ['mix flour , salt and pepper together on a sh...   \n",
-       "1  ['with a mortar and pestle or with the bottom ...   \n",
-       "2  ['preheat oven to 350f', 'line mini muffin cup...   \n",
-       "3  ['in a small bowl , peel , break , and then ma...   \n",
-       "4  ['clean chicken and pat dry', 'sprinkle salt a...   \n",
-       "5  ['preheat broiler and coat a baking sheet with...   \n",
-       "6  ['preheat oven to 350 degrees', 'line the bott...   \n",
-       "7  ['to make prickley pear margarita mix:', 'in a...   \n",
-       "8  ['combine ground beef / mince , breadcrumbs , ...   \n",
-       "9  ['adjust an oven rack to the middle position a...   \n",
-       "\n",
-       "                                         ingredients  \n",
-       "0  ['flour', 'salt', 'black pepper', 'skinless ch...  \n",
-       "1      ['black peppercorns', 'feta cheese', 'honey']  \n",
-       "2  ['butter', 'semi-sweet chocolate chips', 'coco...  \n",
-       "3  ['banana', 'eggs', 'vanilla extract', 'walnuts...  \n",
-       "4  ['roasting chickens', 'sweet onion', 'parsley'...  \n",
-       "5  ['cooking spray', 'plain fat-free yogurt', 'pa...  \n",
-       "6  ['pickled jalapeno pepper', 'eggs', 'mild ched...  \n",
-       "7  ['margarita mix', 'prickly pears', 'gold tequi...  \n",
-       "8  ['ground beef', 'breadcrumbs', 'garlic', 'swee...  \n",
-       "9  ['panko breadcrumbs', 'olive oil', 'parmesan c...  "
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#test cell\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import GaussianNB, MultinomialNB\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.dummy import DummyClassifier\n",
+    "from sklearn import svm\n",
+    "import time\n",
     "\n",
-    "Xtest.head(10)"
+    "#try different classifiers and evaluate individual model performance\n",
+    "#code adapated from Practical 8\n",
+    "\n",
+    "models = [DummyClassifier(strategy='most_frequent'),\n",
+    "          LogisticRegression(),\n",
+    "          GaussianNB(),\n",
+    "          MultinomialNB(),\n",
+    "          svm.LinearSVC(),\n",
+    "          DecisionTreeClassifier(),\n",
+    "          KNeighborsClassifier()]\n",
+    "\n",
+    "titles = ['0-R',\n",
+    "          'Logistic Regression',\n",
+    "          'GNB',\n",
+    "          'MNB',\n",
+    "          'LinearSVC',\n",
+    "          'Decision Tree',\n",
+    "          'KNN']\n",
+    "\n",
+    "for title, model in zip(titles, models):\n",
+    "    \n",
+    "    output = []\n",
+    "    model.fit(Xtrain, y_train)\n",
+    "    y_predict = model.predict(Xtest)\n",
+    "    \n",
+    "    for i in range(len(y_predict)):\n",
+    "        row = [i+1, y_predict[i]]\n",
+    "        output.append(row)\n",
+    "    \n",
+    "    \n",
+    "    output = pd.DataFrame(output, columns = ['id', 'duration_label'])\n",
+    "    output.to_csv(title + '_CV.csv', index = False)\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
