Added Code1-Doc2Vec Pre-Process notebook
- Added csv output files from countvec preprocess notebook
- added doc2vec preprocess notebook using doc2vec as preprocessing method for text features
- currently having issues adding doc2vec arrays into Xtest dataframe

--- a/Code1 - CountVec Pre-process.ipynb
+++ b/Code1 - CountVec Pre-process.ipynb
@@ -62,176 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>n_steps</th>\n",
-       "      <th>n_ingredients</th>\n",
-       "      <th>steps</th>\n",
-       "      <th>ingredients</th>\n",
-       "      <th>duration_label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>wi gal s chicken rice stove top dish made heal...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>12</td>\n",
-       "      <td>['in saucepan , melt margarine and combine wit...</td>\n",
-       "      <td>['margarine', 'olive oil', 'celery', 'onion', ...</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>irish pin oats</td>\n",
-       "      <td>9</td>\n",
-       "      <td>5</td>\n",
-       "      <td>['melt 1 tbs butter in a small saucepan over m...</td>\n",
-       "      <td>['butter', 'pinhead oats', 'water', 'half-and-...</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>cheesy beef   n biscuit casserole</td>\n",
-       "      <td>15</td>\n",
-       "      <td>10</td>\n",
-       "      <td>['brown ground beef , onion and green pepper',...</td>\n",
-       "      <td>['ground beef', 'onion', 'green pepper', 'toma...</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>lemonade chicken  oamc</td>\n",
-       "      <td>10</td>\n",
-       "      <td>8</td>\n",
-       "      <td>['brown chicken in oil', 'combine all ingredie...</td>\n",
-       "      <td>['boneless skinless chicken', 'frozen lemonade...</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>graham and peanut butter bon bons</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>['set almond bark aside', 'mix remaining ingre...</td>\n",
-       "      <td>['graham cracker crumbs', 'crunchy peanut butt...</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>sourdough bread egg and sausage casserole  cat...</td>\n",
-       "      <td>13</td>\n",
-       "      <td>10</td>\n",
-       "      <td>['butter a large deep casserole dish', 'cube o...</td>\n",
-       "      <td>['sourdough bread', 'eggs', 'dried thyme', 'br...</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>sunshine curry chicken</td>\n",
-       "      <td>10</td>\n",
-       "      <td>9</td>\n",
-       "      <td>['combine curry powder with 1 / 2 tsp', 'of sa...</td>\n",
-       "      <td>['curry powder', 'salt', 'black pepper', 'skin...</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>raspberry semifreddo</td>\n",
-       "      <td>24</td>\n",
-       "      <td>9</td>\n",
-       "      <td>['line bottom and sides of a 9x5 loaf pan with...</td>\n",
-       "      <td>['frozen unsweetened raspberries', 'egg yolks'...</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>baked breakfast potatoes</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>['in a large bowl combine all ingredients exce...</td>\n",
-       "      <td>['dried onion', 'black pepper', \"campbell's he...</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>garlic dijon skirt steak</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>['in a bowl , stir together the garlic , musta...</td>\n",
-       "      <td>['garlic', 'dijon mustard', 'fresh lime juice'...</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                name  n_steps  n_ingredients  \\\n",
-       "0  wi gal s chicken rice stove top dish made heal...        6             12   \n",
-       "1                                     irish pin oats        9              5   \n",
-       "2                  cheesy beef   n biscuit casserole       15             10   \n",
-       "3                             lemonade chicken  oamc       10              8   \n",
-       "4                  graham and peanut butter bon bons        6              5   \n",
-       "5  sourdough bread egg and sausage casserole  cat...       13             10   \n",
-       "6                             sunshine curry chicken       10              9   \n",
-       "7                               raspberry semifreddo       24              9   \n",
-       "8                           baked breakfast potatoes        4              8   \n",
-       "9                           garlic dijon skirt steak        7              4   \n",
-       "\n",
-       "                                               steps  \\\n",
-       "0  ['in saucepan , melt margarine and combine wit...   \n",
-       "1  ['melt 1 tbs butter in a small saucepan over m...   \n",
-       "2  ['brown ground beef , onion and green pepper',...   \n",
-       "3  ['brown chicken in oil', 'combine all ingredie...   \n",
-       "4  ['set almond bark aside', 'mix remaining ingre...   \n",
-       "5  ['butter a large deep casserole dish', 'cube o...   \n",
-       "6  ['combine curry powder with 1 / 2 tsp', 'of sa...   \n",
-       "7  ['line bottom and sides of a 9x5 loaf pan with...   \n",
-       "8  ['in a large bowl combine all ingredients exce...   \n",
-       "9  ['in a bowl , stir together the garlic , musta...   \n",
-       "\n",
-       "                                         ingredients  duration_label  \n",
-       "0  ['margarine', 'olive oil', 'celery', 'onion', ...             2.0  \n",
-       "1  ['butter', 'pinhead oats', 'water', 'half-and-...             2.0  \n",
-       "2  ['ground beef', 'onion', 'green pepper', 'toma...             2.0  \n",
-       "3  ['boneless skinless chicken', 'frozen lemonade...             2.0  \n",
-       "4  ['graham cracker crumbs', 'crunchy peanut butt...             2.0  \n",
-       "5  ['sourdough bread', 'eggs', 'dried thyme', 'br...             2.0  \n",
-       "6  ['curry powder', 'salt', 'black pepper', 'skin...             2.0  \n",
-       "7  ['frozen unsweetened raspberries', 'egg yolks'...             3.0  \n",
-       "8  ['dried onion', 'black pepper', \"campbell's he...             2.0  \n",
-       "9  ['garlic', 'dijon mustard', 'fresh lime juice'...             2.0  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -473,12 +306,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "\n",
+    "#code excerpted from Practical 8\n",
+    "#creates a stacking classifier class given a set of classifiers and a meta-classifier\n",
     "class StackingClassifier():\n",
     "\n",
     "    def __init__(self, classifiers, metaclassifier):\n",
@@ -511,35 +353,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#initialise a meta classifier with Logistic Regression as the meta classifier\n",
     "\n",
-    "def train():\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "classifiers = [LogisticRegression(),\n",
+    "          GaussianNB(),\n",
+    "          MultinomialNB(),\n",
+    "          DecisionTreeClassifier(),\n",
+    "          KNeighborsClassifier()]\n",
     "\n",
-    "def predict():\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "meta_clf_lr = LogisticRegression()\n",
+    "stacker_lr = StackingClassifier(classifiers, meta_clf_lr)\n",
     "\n",
-    "def evaluate():\n",
-    "    return"
+    "#create stacked model output\n",
+    "output = []\n",
+    "stacker_lr.fit(Xtrain, y_train)\n",
+    "y_predict = stacker_lr.predict(Xtest)\n",
+    "    \n",
+    "for i in range(len(y_predict)):\n",
+    "    row = [i+1, y_predict[i]]\n",
+    "    output.append(row)\n",
+    "    \n",
+    "output = pd.DataFrame(output, columns = ['id', 'duration_label'])\n",
+    "output.to_csv('stacker' + '_CV.csv', index = False)"
    ]
   },
   {
