--- a/Code [FINAL].ipynb
+++ b/Code [FINAL].ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,59 +173,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train = train_data, test_data, duration_array"
+    "X_train, X_test, y_train = train_data, test_data, duration_array\n",
+    "s_X_train, s_X_test, s_y_train, s_y_test = train_test_split(train_data, duration_array, test_size = 0.25, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "80"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gc\n",
     "\n",
-    "del count_vec_name\n",
-    "del count_vec_steps\n",
-    "del count_vec_ingr\n",
-    "del doc2vec100_name \n",
-    "del doc2vec100_steps\n",
-    "del doc2vec100_ingr \n",
-    "del n_steps\n",
-    "del n_ingr\n",
-    "del n_steps_array \n",
-    "del n_ingr_array\n",
-    "\n",
-    "gc.collect()\n",
+    "#del count_vec_name\n",
+    "#del count_vec_steps\n",
+    "#del count_vec_ingr\n",
+    "#del doc2vec100_name \n",
+    "#del doc2vec100_steps\n",
+    "#del doc2vec100_ingr \n",
+    "#del n_steps\n",
+    "#del n_ingr\n",
+    "#del n_steps_array \n",
+    "#del n_ingr_array\n",
+    "#\n",
+    "#gc.collect()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s_X_train, s_X_test, s_y_train, s_y_test = train_test_split(train_data, duration_array, test_size = 0.25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,20 +306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random Forest accuracy: 0.7109\n",
-      "Logistic Regression accuracy: 0.7512\n",
-      "[14:26:26] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.4.0/src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "XGB accuracy: 0.7483\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#run models on train-test spli\n",
     "\n",
