--- a/Code [FINAL]-Copy1.ipynb
+++ b/Code [FINAL]-Copy1.ipynb
@@ -333,7 +333,7 @@
     }
    ],
    "source": [
-    "#run models on train-test spli\n",
+    "#run models on train-test split\n",
     "\n",
     "models = [RandomForestClassifier(n_estimators=64),\n",
     "          LogisticRegression(),\n",
