Added eval data for different models parameters
-Optimised models
-Fix memory error issues

--- a/Code1 -Model Eval and VIsualisation.ipynb
+++ b/Code1 -Model Eval and VIsualisation.ipynb
@@ -63,11 +63,7 @@
     "gc.collect()\n",
     "#count_vec_name = scipy.sparse.load_npz(\"ML2_data/recipe_text_features_countvec/train_name_vec.npz\").toarray().astype('float32')\n",
     "count_vec_steps = scipy.sparse.load_npz(\"ML2_data/recipe_text_features_countvec/train_steps_vec.npz\").toarray().astype('float32')\n",
-    "count_vec_ingr = scipy.sparse.load_npz(\"ML2_data/recipe_text_features_countvec/train_ingr_vec.npz\").toarray().astype('float32')\n",
-    "\n",
-    "#test_count_vec_name = scipy.sparse.load_npz(\"ML2_data/recipe_text_features_countvec/test_name_vec.npz\").toarray().astype('float32')\n",
-    "test_count_vec_steps = scipy.sparse.load_npz(\"ML2_data/recipe_text_features_countvec/test_steps_vec.npz\").toarray().astype('float32')\n",
-    "test_count_vec_ingr = scipy.sparse.load_npz(\"ML2_data/recipe_text_features_countvec/test_ingr_vec.npz\").toarray().astype('float32')"
+    "count_vec_ingr = scipy.sparse.load_npz(\"ML2_data/recipe_text_features_countvec/train_ingr_vec.npz\").toarray().astype('float32')"
    ]
   },
   {
@@ -77,21 +73,14 @@
    "outputs": [],
    "source": [
     "#Read Doc2Vec\n",
-    "\n",
+    "gc.collect()\n",
     "doc2vec100_name = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec100/train_name_doc2vec100.csv\", header = None).values.astype('float32')\n",
-    "#doc2vec100_steps = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec100/train_steps_doc2vec100.csv\", header = None).values.astype('float32')\n",
-    "#doc2vec100_ingr = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec100/train_ingr_doc2vec100.csv\", header = None).values.astype('float32')\n",
+    "doc2vec100_steps = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec100/train_steps_doc2vec100.csv\", header = None).values.astype('float32')\n",
+    "doc2vec100_ingr = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec100/train_ingr_doc2vec100.csv\", header = None).values.astype('float32')\n",
     "\n",
-    "test_doc2vec100_name = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec100/test_name_doc2vec100.csv\", header = None).values.astype('float32')\n",
-    "#test_doc2vec100_steps = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec100/test_steps_doc2vec100.csv\", header = None).values.astype('float32')\n",
-    "#test_doc2vec100_ingr = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec100/test_ingr_doc2vec100.csv\", header = None).values.astype('float32')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Extract data from recipe csv"
+    "doc2vec50_name = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec50/train_name_doc2vec50.csv\", header = None).values.astype('float32')\n",
+    "doc2vec50_steps = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec50/train_steps_doc2vec50.csv\", header = None).values.astype('float32')\n",
+    "doc2vec50_ingr = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec50/train_ingr_doc2vec50.csv\", header = None).values.astype('float32')\n"
    ]
   },
   {
@@ -100,9 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "csv_data = pd.read_csv(\"ML2_data/recipe_train.csv\")\n",
-    "test_csv_data = pd.read_csv(\"ML2_data/recipe_test.csv\")\n",
+    "#test_csv_data = pd.read_csv(\"ML2_data/recipe_test.csv\")\n",
     "\n",
     "n_steps = csv_data.iloc[:,1]\n",
     "n_steps = n_steps.values\n",
@@ -110,28 +98,16 @@
     "n_ingr = csv_data.iloc[:,2]\n",
     "n_ingr = n_ingr.values\n",
     "\n",
-    "test_n_steps = test_csv_data.iloc[:,1]\n",
-    "test_n_steps = test_n_steps.values\n",
-    "\n",
-    "test_n_ingr =  test_csv_data.iloc[:,2]\n",
-    "test_n_ingr =  test_n_ingr.values\n",
-    "\n",
+    "#class labels\n",
     "duration_array = csv_data.iloc[:,-1]\n",
     "duration_array = duration_array.values\n",
     "\n",
     "n_steps_array = []\n",
     "n_ingr_array = []\n",
     "\n",
-    "test_n_steps_array = []\n",
-    "test_n_ingr_array = []\n",
-    "\n",
     "for i in range(len(n_steps)):\n",
     "    n_steps_array.append([n_steps[i]])\n",
-    "    n_ingr_array.append([n_ingr[i]])\n",
-    "    \n",
-    "for i in range(len(test_n_steps)):\n",
-    "    test_n_steps_array.append([test_n_steps[i]])\n",
-    "    test_n_ingr_array.append([test_n_ingr[i]])\n"
+    "    n_ingr_array.append([n_ingr[i]])\n"
    ]
   },
   {
@@ -140,6 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "#Stack text features into a train_data array\n",
     "train_data = np.hstack([n_steps_array,\n",
     "                        n_ingr_array,\n",
@@ -147,58 +124,25 @@
     "                        count_vec_steps,\n",
     "                        count_vec_ingr \n",
     "                        ])\n",
-    "test_data = np.hstack([ test_n_steps_array,\n",
-    "                        test_n_ingr_array,\n",
-    "                        test_doc2vec100_name,\n",
-    "                        test_count_vec_steps,\n",
-    "                       test_count_vec_ingr])\n",
-    "\n",
-    "\n",
     "print(train_data.shape)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " #X_train, X_test, y_train, y_test = train_test_split(train_data, duration_array, test_size=0.25, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " X_train, X_test, y_train = train_data, test_data, duration_array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#del n_steps_array\n",
-    "#del n_ingr_array\n",
-    "#del csv_data\n",
-    "#del test_csv_data\n",
-    "#del count_vec_name\n",
-    "del count_vec_steps\n",
-    "del count_vec_ingr\n",
     "\n",
-    "del test_n_steps_array\n",
-    "del test_n_ingr_array\n",
-    "del test_doc2vec100_name\n",
-    "#del test_doc2vec100_steps\n",
-    "#del test_doc2vec100_ingr\n",
-    "#del test_count_vec_name\n",
-    "del test_count_vec_steps\n",
-    "del test_count_vec_ingr\n",
+    "del n_steps_array\n",
+    "del n_ingr_array\n",
+    "del doc2vec100_name\n",
+    "del count_vec_steps\n",
+    "del count_vec_ingr \n",
+    "\n",
     "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#split train and test data \n",
+    "X_train, X_test, y_train, y_test = train_test_split(train_data, duration_array, test_size=0.25, random_state=42, stratify=duration_array)"
    ]
   },
   {
@@ -210,7 +154,8 @@
     "#abs_scaler = preprocessing.MaxAbsScaler()\n",
     "#\n",
     "#X_train = abs_scaler.fit_transform(X_train)\n",
-    "#X_test = abs_scaler.fit_transform(X_test)\n"
+    "#X_test = abs_scaler.fit_transform(X_test)\n",
+    "#"
    ]
   },
   {
@@ -226,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#gc.collect()"
+    "gc.collect()"
    ]
   },
   {
@@ -235,58 +180,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selection = SelectKBest(score_func=f_classif, k=2000)\n",
+    "import warnings\n",
+    "warnings.simplefilter(\"ignore\", UserWarning)\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import GaussianNB, MultinomialNB\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.dummy import DummyClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, BaggingClassifier, AdaBoostClassifier\n",
+    "\n",
+    "from sklearn import svm\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selection = SelectKBest(score_func=f_classif, k=50)\n",
     "selection.fit(X_train,y_train)\n",
-    "X_train = selection.transform(X_train)\n",
+    "X_train =selection.transform(X_train)\n",
     "X_test = selection.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.naive_bayes import GaussianNB, MultinomialNB\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.dummy import DummyClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn import svm\n",
-    "import time\n",
-    "\n",
     "#try different classifiers and evaluate individual model performance\n",
     "#code adapated from Practical 8\n",
     "\n",
     "models = [LogisticRegression(),\n",
-    "          XGBClassifier(tree_method = 'gpu_hist'),\n",
-    "          svm.LinearSVC(),\n",
-    "          RandomForestClassifier(n_jobs=-1)\n",
-    "         ]  \n",
+    "          RandomForestClassifier(n_jobs=-1),\n",
+    "          XGBClassifier(tree_method='gpu_hist'),\n",
+    "          svm.LinearSVC()]\n",
     "\n",
     "titles = ['Logistic Regression',\n",
-    "          'XGB',\n",
-    "          'LinearSVC',\n",
-    "          'Decision Tree']\n",
+    "          'Random Forest',\n",
+    "          'XGBoost',\n",
+    "         'LinearSVC()']\n",
+    "output = []\n",
+    "total_time = 0\n",
+    "total_score = 0\n",
     "\n",
+    "#test individual model performance\n",
     "for title, model in zip(titles, models):\n",
     "    t_start = time.time()\n",
-    "    output = []\n",
+    "\n",
+    "    row = []\n",
+    "    \n",
     "    model.fit(X_train, y_train)\n",
-    "    y_predict = model.predict(X_test)\n",
-    "     \n",
-    "    for i in range(len(y_predict)):\n",
-    "        row = [i+1, y_predict[i]]\n",
-    "        output.append(row)\n",
-    "   \n",
-    "    output = pd.DataFrame(output, columns = ['id', 'duration_label'])\n",
-    "    output.to_csv(title + '_Mixed500.csv', index = False)\n",
+    "    score = model.score(X_test, y_test)\n",
+    "    t_end = time.time()\n",
+    "    time_taken = t_end-t_start\n",
+    "    total_time += time_taken\n",
+    "    total_score += score\n",
+    "    row = [title, score, round(time_taken, 3)]\n",
     "    \n",
-    "    \n",
-    "t_end = time.time()\n",
-    "print('time elapsed:', round(t_end-t_start, 3))\n",
+    "    print(title, score, round(time_taken, 3))\n",
+    "    output.append(row)\n",
+    "\n",
+    "#output model performance to CSV file\n",
+    "row = ['Average',  total_score/len(models), total_time/len(models)]\n",
+    "output.append(row)\n",
+    "\n",
+    "output = pd.DataFrame(output, columns = ['model', 'score','duration'])\n",
+    "output.to_csv('50FeaturesMixed.csv', index = False)    \n",
+    "\n",
     "# y_pred = model.predict(X_test)\n",
     "# predictions = [round(value) for value in y_pred]\n",
     "# accuracy = accuracy_score(y_test, y_pred)\n",
@@ -301,17 +268,10 @@
    "source": [
     "xgb = XGBClassifier(tree_method='gpu_hist')\n",
     "\n",
-    "output = []\n",
-    "xgb.fit(new_X_train, y_train)\n",
-    "\n",
-    "y_predict = xgb.predict(new_X_test)\n",
-    "\n",
     "for i in range(len(y_predict)):\n",
     "    row = [i+1, y_predict[i]]\n",
     "    output.append(row)\n",
-    "  \n",
-    "output = pd.DataFrame(output, columns = ['id', 'duration_label'])\n",
-    "output.to_csv('xgb'+ '_CV.csv', index = False)"
+    "    "
    ]
   },
   {
@@ -335,27 +295,25 @@
     "models = [LogisticRegression(),\n",
     "          XGBClassifier(tree_method='gpu_hist'),\n",
     "          svm.LinearSVC(),\n",
-    "          RandomForestClassifier(n_jobs=-1)]\n",
+    "          RandomForestClassifier(n_jobs =-1)]\n",
     "\n",
     "titles = ['Logistic Regression',\n",
     "          'XGB',\n",
     "          'LinearSVC',\n",
-    "          'Random Forest']\n",
+    "          'Decision Tree']\n",
     "\n",
     "clf = StackingClassifier(\n",
     "    estimators=list(zip(titles,models)), final_estimator=XGBClassifier(tree_method='gpu_hist')\n",
     "     )\n",
     "\n",
     "output = []\n",
-    "clf.fit(X_train, y_train)\n",
-    "y_predict = clf.predict(X_test)\n",
+    "clf.fit(new_X_train, y_train)\n",
+    "y_predict = clf.predict(new_X_test)\n",
     "\n",
     "for i in range(len(y_predict)):\n",
     "    row = [i+1, y_predict[i]]\n",
     "    output.append(row)\n",
-    "\n",
-    "output = pd.DataFrame(output, columns = ['id', 'duration_label'])\n",
-    "output.to_csv('Stacker'+ '_CV.csv', index = False)"
+    "  \n"
    ]
   },
   {
@@ -365,8 +323,6 @@
    "outputs": [],
    "source": [
     "#implement ADABoost\n",
-    "\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
     "\n",
     "clf = AdaBoostClassifier(n_estimators=300, random_state=0)\n",
     "\n",
@@ -401,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selection = SelectKBest(score_func=f_classif, k=50)\n",
+    "selection = SelectKBest(score_func=f_classif, k=500)\n",
     "selection.fit(X_train,y_train)\n",
     "new_X_train = selection.transform(X_train)\n",
     "new_X_test = selection.transform(X_test)"
